--- a/style.css
+++ b/style.css
@@ -1,25 +1,38 @@
 body {
-    font-family: Arial, Helvetica, sans-serif; color:#777; background: #777; width: 960px; font-size: 18px
+    font-family: Arial, Helvetica, sans-serif; color:#777; background: #777; width: 960px; font-size: 18px; margin-left: 200px; 
 }
 header, nav, footer, section, aside {
     background: #ebebeb
 }
 
-Article {
+article {
     color: #ebebed; background: #777;
 }
 h1, p {
     color: #777; background: #ebebeb
 }
-Section {
+section {
     width: 495px
 }
-Aside {
+.izquierda {
     float: right;
 }
 #portfolio {
-    text-align: center
+    text-align: center; height: 80px; box-sizing: border-box;
 }
 #link {
-    text-align: center
+    text-align: center; height: 80px; box-sizing: border-box;
+}
+.derecha {
+    float: left; width: 400px; box-sizing: border-box;
+}
+#prueba {
+    width: 130px; margin: 100px; float: right; display: block; margin-left: 50px
+}
+
+footer {
+    clear: both; text-align: center; margin-bottom: 10px;
+}
+#article {
+
 }
