--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif; color:#777; background: #777; width: 960px; font-size: 18px; margin-left: 200px; 
 }
 header, nav, footer, section, aside {
-    background: #ebebeb
+    background: #ebebeb; text-align: center
 }
 
 article {
@@ -14,25 +14,20 @@ h1, p {
 section {
     width: 495px
 }
-.izquierda {
+.derecha {
     float: right;
 }
-#portfolio {
+#portfolio, #link {
     text-align: center; height: 80px; box-sizing: border-box;
 }
-#link {
-    text-align: center; height: 80px; box-sizing: border-box;
-}
-.derecha {
-    float: left; width: 400px; box-sizing: border-box;
+
+.izquierda {
+    float: left; width: 400px; box-sizing: border-box; text-align: center;
 }
 #prueba {
     width: 130px; margin: 100px; float: right; display: block; margin-left: 50px
 }
 
 footer {
-    clear: both; text-align: center; margin-bottom: 10px;
-}
-#article {
-
+    clear: both; margin-bottom: 10px;
 }
